--- a/package.json
+++ b/package.json
@@ -1,71 +1,73 @@
 {
-   "name": "debrid-media-manager",
-   "version": "4.0.1",
-   "private": false,
-   "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start",
-      "lint": "next lint",
-      "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,md}'",
-      "test": "vitest"
-   },
-   "dependencies": {
-      "@ctrl/video-filename-parser": "^5.2.0",
-      "@octokit/rest": "^20.1.0",
-      "@prisma/client": "^5.12.1",
-      "axios": "^1.6.8",
-      "axios-rate-limit": "^1.4.0",
-      "bencode": "^4.0.0",
-      "express": "^4.18.2",
-      "fastest-levenshtein": "^1.0.16",
-      "file-saver": "^2.0.5",
-      "idb": "^8.0.0",
-      "lodash": "^4.17.21",
-      "lz-string": "^1.5.0",
-      "next": "^13.4.19",
-      "next-pwa": "^5.6.0",
-      "parse-torrent-title": "github:TorBox-App/parse-torrent-title",
-      "pg": "^8.11.3",
-      "qs": "^6.11.1",
-      "react": "18.2.0",
-      "react-dom": "18.2.0",
-      "react-hot-toast": "^2.4.0",
-      "react-icons": "^4.8.0",
-      "sharp": "^0.32.6",
-      "socks-proxy-agent": "^7.0.0",
-      "sqlite": "^5.1.1",
-      "sqlite3": "^5.1.6",
-      "stremio-addon-sdk": "^1.6.10",
-      "sweetalert2": "^11.10.0",
-      "user-agents": "^1.0.1444",
-      "uuid": "^9.0.0"
-   },
-   "devDependencies": {
-      "@types/axios": "^0.14.0",
-      "@types/bencode": "^2.0.2",
-      "@types/file-saver": "^2.0.5",
-      "@types/lodash": "^4.14.202",
-      "@types/node": "^20.6.3",
-      "@types/pg": "^8.10.9",
-      "@types/qs": "^6.9.7",
-      "@types/react": "^18.2.22",
-      "@types/react-dom": "^18.2.7",
-      "@types/sqlite3": "^3.1.11",
-      "@types/user-agents": "^1.0.2",
-      "@types/uuid": "^9.0.4",
-      "autoprefixer": "^10.4.14",
-      "critters": "^0.0.23",
-      "eslint": "^8.49.0",
-      "eslint-config-next": "^13.5.2",
-      "postcss": "^8.4.21",
-      "prettier": "^3.2.5",
-      "prettier-plugin-organize-imports": "^3.2.2",
-      "prettier-plugin-sort-json": "^4.0.0",
-      "prisma": "^5.2.0",
-      "tailwindcss": "^3.4.14",
-      "ts-node": "10.7.0",
-      "typescript": "^5.2.2",
-      "vitest": "^0.34.6"
-   }
+  "name": "debrid-media-manager",
+  "version": "4.0.1",
+  "private": false,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,md}'",
+    "test": "vitest",
+    "prepare": "husky"
+  },
+  "dependencies": {
+    "@ctrl/video-filename-parser": "^5.2.0",
+    "@octokit/rest": "^20.1.0",
+    "@prisma/client": "^5.12.1",
+    "axios": "^1.6.8",
+    "axios-rate-limit": "^1.4.0",
+    "bencode": "^4.0.0",
+    "express": "^4.18.2",
+    "fastest-levenshtein": "^1.0.16",
+    "file-saver": "^2.0.5",
+    "idb": "^8.0.0",
+    "lodash": "^4.17.21",
+    "lz-string": "^1.5.0",
+    "next": "^13.4.19",
+    "next-pwa": "^5.6.0",
+    "parse-torrent-title": "github:TorBox-App/parse-torrent-title",
+    "pg": "^8.11.3",
+    "qs": "^6.11.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.8.0",
+    "sharp": "^0.32.6",
+    "socks-proxy-agent": "^7.0.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.6",
+    "stremio-addon-sdk": "^1.6.10",
+    "sweetalert2": "^11.10.0",
+    "user-agents": "^1.0.1444",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/bencode": "^2.0.2",
+    "@types/file-saver": "^2.0.5",
+    "@types/lodash": "^4.14.202",
+    "@types/node": "^20.6.3",
+    "@types/pg": "^8.10.9",
+    "@types/qs": "^6.9.7",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
+    "@types/sqlite3": "^3.1.11",
+    "@types/user-agents": "^1.0.2",
+    "@types/uuid": "^9.0.4",
+    "autoprefixer": "^10.4.14",
+    "critters": "^0.0.23",
+    "eslint": "^8.49.0",
+    "eslint-config-next": "^13.5.2",
+    "husky": "^9.1.6",
+    "postcss": "^8.4.21",
+    "prettier": "^3.2.5",
+    "prettier-plugin-organize-imports": "^3.2.2",
+    "prettier-plugin-sort-json": "^4.0.0",
+    "prisma": "^5.2.0",
+    "tailwindcss": "^3.4.14",
+    "ts-node": "10.7.0",
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.6"
+  }
 }
